syntax = "proto3";
import "google/protobuf/empty.proto";
package boli;

service Translate {
    rpc TranslateText (Translation) returns (TranslationRecorded);
    rpc GetTranslations (google.protobuf.Empty) returns (Translations);
}

message Translation {
    string source_language = 1;
    string destination_language = 2;
    string source_text = 3;
    string destination_text = 4;
}

message TranslationRecorded {}

message Translations {
    repeated Translation translations = 1;
}